# Manticore

./: CMakeLists.txt  README.md  linecount.sh
src/: dummy.cpp  main.cpp
src/IR/: CMakeLists.txt  IRToByteCode.cpp
src/core/: CMakeLists.txt  internal.cpp
src/headers/manticore/IR/: IR.h  IRToByteCode.h  instructions.h
src/headers/manticore/core/: internal.h  version.h
src/headers/manticore/parser/: ast.h  lexer.h  parser.h  rule.h
src/parser/: CMakeLists.txt  ast.cpp  lexer.cpp  parser.cpp  rule.cpp
